--- a/views/about.ejs
+++ b/views/about.ejs
@@ -6,8 +6,8 @@
 
         <div class="blogs content">
             <h2>About me</h2>
-            <p>Hey my name is Tony</p>
-            <p>I'm a cool guy!</p>
+            <p>My name is INSERT_NAME_HERE</p>
+            <p>ADD_DESCRIPTION</p>
         </div>
         <%- include('./partials/footer.ejs') %>
     </body>
