--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,6 +1,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tony's Blog | <%= title %></title>
+    <title>INSERT_NAME_HERE Blog | <%= title %></title>
     <link rel="stylesheet" href="/styles.css">
 </head>
