--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,7 @@
 <nav>
     <div class="site-title">
-        <a href="/"><h1>Tony's Blog</h1></a>
-        <p>Tony Leng's website</p>
+        <a href="/"><h1>INSERT_NAME_HERE Blog</h1></a>
+        <p>INSERT_NAME_HERE website</p>
     </div>
     <ul>
         <li><a href="/">Blogs</a></li>
